@startuml
class com.masanz.imperia.modelo.DosValores {
- int uno
- int dos
+ <<Create>> DosValores(int,int)
+ int dos()
+ int uno()
}


class com.masanz.imperia.terminal.Juego {
# List<Jugador> jugadores
# int turno
+ <<Create>> Juego()
+ void setJugadores(List<Jugador>)
+ void crearJugadores()
+ void repartirTerritorios()
+ void colocarEjercitos()
- void colocarUnEjercitoEnCadaTerritorio()
+ void colocarEjercitos(Jugador)
+ int ejercitosInicialesPorJugador()
+ void repartoUniformeEjercitos(String)
+ void jugarJuego()
# boolean comprobarJugadores()
+ boolean jugar(Jugador)
+ boolean atacar(Jugador)
# DosValores atacar(Territorio,Territorio)
# void resultado(Territorio,Territorio,int,int)
}


class com.masanz.imperia.modelo.Tirada {
- ArrayList<Integer> valores
- Dado dado
+ <<Create>> Tirada()
+ void tirarDados(int)
- void ordenarValores()
+ ArrayList<Integer> getValores()
+ int getValorMaximo()
+ double getValorMedio()
+ int perdidas(Tirada)
+ String toString()
}


class com.masanz.imperia.modelo.Mundo {
- {static} TreeMap<String,Territorio> mapaTerritorios
+ {static} void loadWorld()
+ {static} Territorio getTerritorio(String)
+ {static} void ponerEnTerritorioEjercitos(String,int)
+ {static} void addTerritorio(String,Territorio)
+ {static} List<Territorio> getListaTerritorios()
+ {static} List<Territorio> getListaTerritoriosDelJugador(String)
+ {static} String listadoConFronteras()
+ {static} String listadoConFronteras(String)
+ {static} String descripcionTerritorioConFronteras(String)
+ {static} List<String> listaNombresTerritorios()
+ {static} int ejercitosDe(String)
+ {static} boolean estaTerritorio(String)
+ {static} boolean esTerritorioDelJugador(String,String)
}


class com.masanz.imperia.terminal.Gui {
- {static} Scanner teclado
- {static} void mostrarTitulo(String)
+ {static} void mostrarPresentacion()
+ {static} void mostrarGanadorJuego(String)
+ {static} void mostrarFinJuego()
+ {static} int leerNumeroJugadores()
+ {static} String leerNombreJugador(int)
+ {static} String leerIdentificadorJugador(int)
+ {static} void mostrarEmpiezaJugador(int,String)
+ {static} int menuColocarEjercitos(String,int)
+ {static} int menuJuego(String)
+ {static} void mostrarTerritorios(String)
+ {static} void mostrarTerritoriosMundo()
+ {static} void modificarEnTerritorioEjercitosJugador(String,int)
+ {static} void mostrarEjercitosPendientesDeColocarJugador(String,int)
+ {static} boolean comprobarEjercitosJugador(String,int)
+ {static} void mostrarJugadorSinEjercitosEliminado(String)
+ {static} boolean confirmarFin()
+ {static} String obtenerNombreTerritorioAtacante(String)
+ {static} String obtenerNombreTerritorioAtacado(String)
+ {static} void mostrarPerdidasTirada(String,String,int,String,int)
- {static} void mostrarResultadoTerritorioEjercitos(String,String,String,int)
+ {static} void mostrarNoGanaJugadorPierdeTerritorioEjercitos(String,String,int)
+ {static} void mostrarGanaJugadorTerritorioPierdeEjercitos(String,String,int)
+ {static} void mostrarDescripcionesTerritoriosAtacanteAtacado(String,String)
}


class com.masanz.imperia.terminal.Main {
+ {static} void main(String[])
}

class com.masanz.imperia.Main {
+ {static} void main(String[])
}

class com.masanz.imperia.modelo.Dado {
- int valor
+ <<Create>> Dado()
+ int getValor()
+ void tirar()
}


class com.masanz.imperia.modelo.Jugador {
- String id
- String nombre
+ <<Create>> Jugador(String,String)
+ String getId()
+ String getNombre()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}


class com.masanz.imperia.modelo.Territorio {
- String nombre
- List<String> vecinos
- Jugador jugador
- int ejercitos
+ <<Create>> Territorio(String)
+ String getNombre()
+ Jugador getJugador()
+ void setJugador(Jugador)
+ int getEjercitos()
+ void setEjercitos(int)
+ void sumarEjercitos(int)
+ void restarEjercitos(int)
+ List<String> getVecinos()
+ void agregarVecino(String)
+ String toString()
}


com.masanz.imperia.Main ..> com.masanz.imperia.terminal.Main
com.masanz.imperia.terminal.Main ..> com.masanz.imperia.terminal.Juego
com.masanz.imperia.terminal.Gui ..> com.masanz.imperia.modelo.Jugador
com.masanz.imperia.terminal.Gui ..> com.masanz.imperia.modelo.Mundo
com.masanz.imperia.terminal.Gui ..> com.masanz.imperia.modelo.Territorio
com.masanz.imperia.terminal.Juego *-> com.masanz.imperia.modelo.Jugador
com.masanz.imperia.terminal.Juego ..> com.masanz.imperia.terminal.Gui
com.masanz.imperia.terminal.Juego ..> com.masanz.imperia.modelo
com.masanz.imperia.modelo.Mundo *-> com.masanz.imperia.modelo.Territorio
com.masanz.imperia.modelo.Tirada --> com.masanz.imperia.modelo.Dado
@enduml